<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login / register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_weight">Weight</string>
    <string name="prompt_height">Height</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_daily_calories">Daily calories (optional)</string>
    <string name="prompt_life_style">Life Style</string>

    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign in</string>
    <string name="action_sign_in">Sign in</string>

    <!-- Strings related to main screens -->
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Daily ration</string>
    <string name="title_food_list">Food list</string>
    <string name="title_ration_history">Ration history</string>
    <string name="title_add_dish">Add dish</string>
    <string name="date">Current date</string>
    <string name="current_date">10.02.2018</string>
    <string name="add_dish">Add dish</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="name_of_dish">Name of dish</string>
    <string name="calories">calories</string>
    <string name="protein">protein</string>
    <string name="carbohydrates">carbohydrates</string>
    <string name="fats">fats</string>
    <string name="add">Add</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
